# NetSim

./: CMakeLists.txt
include/: factory.hpp  helpers.hpp  nodes.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
lab6/: CMakeLists.txt
lab6/include/: helpers.hpp  nodes.hpp  simulation.hpp
lab6/src/: storage_types.cpp
src/: factory.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp
